# gen/http/openapi3.yaml
@@ -11,7 +11,7 @@ paths:
             tags:
                 - calc
             summary: add calc
-            description: Adds two integes and returns the result.
+            description: Adds two integers and returns the result.
             operationId: calc#add
             parameters:
                 - name: a
@@ -19,17 +19,17 @@ paths:
                   required: true
                   schema:
                     type: integer
-                    example: 1086137054
+                    example: 292483880
                     format: int64
-                  example: 527538563
+                  example: 312340699
                 - name: b
                   in: path
                   required: true
                   schema:
                     type: integer
-                    example: 2135143470
+                    example: 396407178
                     format: int64
-                  example: 885860479
+                  example: 1242178904
             responses:
                 "200":
                     description: OK response.
@@ -37,9 +37,43 @@ paths:
                         application/json:
                             schema:
                                 type: integer
-                                example: 805352709
+                                example: 621720987
                                 format: int64
-                            example: 242624345
+                            example: 1496178131
+    /sub/{a}/{b}:
+        get:
+            tags:
+                - calc
+            summary: subtract calc
+            description: Subtracts two integers and returns the result.
+            operationId: calc#subtract
+            parameters:
+                - name: a
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    example: 1516744731
+                    format: int64
+                  example: 842555000
+                - name: b
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    example: 955595836
+                    format: int64
+                  example: 499160208
+            responses:
+                "200":
+                    description: OK response.
+                    content:
+                        application/json:
+                            schema:
+                                type: integer
+                                example: 1975077685
+                                format: int64
+                            example: 818051480
 components: {}
 tags:
     - name: calc
